2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (main): Don't call fraucheky_main until configured.

	* chopstx: Update to 0.12.

	* src/main.c (usb_cb_get_descriptor): sys_board_name is only
	available in newer SYS.

2016-05-30  NIIBE Yutaka  <gniibe@fsij.org>

	* src/main.c (usb_cb_tx_done, usb_cb_rx_ready): Fix for Fraucheky.

	* fraucheky: Update.

	* chopstx: Update.

	* src/stm32f103.h, src/usb_stm32f103.c: Remove.
	* src/adc_stm32f103.c, src/aes-constant-ft.c: Remove
	* src/sys.c, src/sys.h: Remove.
	* neug.ld.in, Makefile.in: Use SYS, USB, ADC in Chopstx.

2016-05-27  NIIBE Yutaka  <gniibe@fsij.org>

	* src/adc_stm32f103.c (adc_intr): Define in this module.
	(adc_init): Claim IRQ here.
	(adc_wait_completion): Don't expose INTR.

	* src/neug.c (INTR_REQ_DMA1_Channel1): Remove.
	(rng): Follow the change of ADC API.

2016-05-26  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx: Update.
	* src/adc.h: Update from Gnuk.
	* src/neug.c: Update from Gnuk.
	* src/usb_stm32f103.c: Update from Chopstx.
	* src/usb_lld.h: Update from Chopstx.
	* src/sys.c: Update from Chopstx.
	* src/configure: Follow the change of USB API.
	* src/main.c (usb_cb_device_reset, usb_cb_ctrl_write_finish)
	(vcom_port_data_setup, usb_cb_setup, usb_cb_get_descriptor)
	(usb_cb_interface, usb_intr): Follow the change of USB API.
	(VCOM_FEATURE_BUS_POWERED): New.
	(usb_cb_handle_event): Clean up.
	(usb_cb_tx_done, usb_cb_rx_ready): New.
	(main): Use chopstx_poll.

2016-02-05   Niibe Yutaka  <gniibe@fsij.org>

	* src/configure: Add submodule check suggested by Elliott
	Mitchell.

2015-09-18  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: 1.0.4.

2015-09-15  Niibe Yutaka  <gniibe@fsij.org>

	* src/neug.ld.in (__main_stack_size__): Decrease stack size of
	exception handlers.
	(__process0_stack_size__): Decrease stack size of main.
	(__process1_stack_size__): Decrease stack size of led.
	(__process2_stack_size__): Increase stack size of rng.
