@@ -1,3 +1,8 @@
+2016-06-01  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* tool/neug_upgrade.py (regnual.__init__): Don't call
+	setAltInterface since we have no alternative.
+
 2016-05-31  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/main.c (main): Don't call fraucheky_main until configured.
